[package]
name = "attestation-tool"
version = "0.2.0"
authors = ["Oasis Protocol Foundation", "Fortanix, Inc."]
license = "MPL-2.0"
edition = "2018"

[dependencies]
ias = { version = "0.1.0", features = ["client", "mbedtls"] }
aesm-client = { version = "0.5", features = ["sgxs"] }
sgxs = { version = "0.7" }
sgxs-loaders = { version = "0.3" }
report-test = { version = "0.3" }
sgx-isa = { version = "0.4" }

clap = "2.23.3"
pkix = "0.1"
lazy_static = "1"
tokio = { version = "1", features = ["macros"] }
base64 = { version = "0.13" }
env_logger = "0.9.0"
